# pj_invest_platform

./: .gitignore  README.md
backend/: check_hanil.py  pyproject.toml
backend/app/: database.py  main.py  scheduler.py  schemas.py  seed.py
backend/app/api/routes/: accounts.py  dashboard.py  kis.py  market.py  stocks.py  strategies.py  transactions.py
backend/app/cleaners/: dart_corp_cleaner.py  dart_dividend_cleaner.py  dart_financial_cleaner.py  krx_price_cleaner.py  krx_stock_cleaner.py
backend/app/clients/: aden_client.py  cftc_cot_collector.py  dart_collector.py  kis_client.py  krx_collector.py  macro_collector.py  yahoo_collector.py
backend/app/core/: config.py
backend/app/db/: db.py  init_db.py
backend/app/pipelines/: krx_daily_price_pipeline.py  sync_cftc_cot_pipeline.py  sync_financials_pipeline.py  sync_macro_pipeline.py  sync_yahoo_futures_pipeline.py
backend/app/services/: auto_trader_service.py  telegram_service.py
backend/app/strategies/: base.py  dead_cat_backtester.py  dead_cat_short.py  opportunity_growth_strategy.py  sector_diversified_growth_strategy.py  step0_market_leader_strategy.py  step1_market_leader_strategy.py  stock_backtester.py  undervalued_dividend_strategy.py  volume_climax.py  volume_climax_flip.py
data/: kis_paper_token.json  kis_real_token.json
frontend/: package-lock.json
frontend/src/: App.tsx
frontend/src/components/: AccountDetails.tsx  ActiveHoldings.tsx  AssetMonitor.tsx  KisTradingPanel.tsx  LiveLogs.tsx  MacroDashboard.tsx  RecentTrades.tsx  SignalAlerts.tsx  StockDetail.tsx  StockExplorer.tsx  (+4 more)
(+1 files in other folders)
